Vision Process Robots

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,27 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${Soccer_SOURCE_DIR}/cmake")
 set(APP_TARGET Soccer)
 
 
-
-
 file(GLOB core_src
     "src/*/*.cpp"
 )
 
+find_package(Protobuf REQUIRED)
+include_directories(${Protobuf_INCLUDE_DIRS})
+set(GLOB PROTOBUF_MODELS_INCLUDES "")
+set(GLOB PROTOBUF_MODELS_SOURCES "")
+file(GLOB PROTOBUF_DEFINITION_FILES ${PROJECT_SOURCE_DIR}/protobuf/*.proto)
+foreach(file ${PROTOBUF_DEFINITION_FILES})
+    set(proto_files "${proto_files} ${file}")
+    protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${file})
+    
+    set(PROTOBUF_MODELS_INCLUDES "${PROTOBUF_MODELS_INCLUDES} ${PROTO_HDRS}")
+    set(PROTOBUF_MODELS_SOURCES "${PROTOBUF_MODELS_SOURCES} ${PROTO_SRCS}")
+    list(APPEND core_src ${PROTO_SRCS})
+endforeach()
 add_executable(${APP_TARGET}
 	main.cpp
     ${core_src}
+
 )
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
@@ -30,10 +42,12 @@ include_directories(/usr/local/include ${LUA_INCLUDE_DIR})
 find_package(spdlog REQUIRED)
 
 
-target_link_libraries(${APP_TARGET} ${SPDLOG_LIBRARIES}  ${EnTT_LIBRARIES})
+target_link_libraries(${APP_TARGET} ${SPDLOG_LIBRARIES})
 target_link_libraries(${APP_TARGET} ${LUA_LIBRARIES})
-
+target_link_libraries(${APP_TARGET} ${Protobuf_LIBRARIES})
 target_compile_features(${APP_TARGET}
     PRIVATE
     cxx_std_17
 )
+
+
